# edge_maskgit

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md
.claude/: settings.json
benchmark/: analysis.md  roofline.py  run_bench.sh
benchmark/results/: device.md  host.md
benchmark/seqlen-sweep/: README.md  crossover_model.py  device-fa-n1024-gq4.txt  device-fa-n1024-gq8.txt  device-fa-n256-gq4.txt  device-fa-n256-gq8.txt  device-fa-n4096-gq4.txt  device-fa-n4096-gq8.txt  device-fa-n64-gq4.txt  device-fa-n64-gq8.txt  device-n1024-gq8.txt  device-n256-gq8.txt  device-n4096-gq8.txt  device-n64-gq8.txt  device-xnn-n1024-q4.txt  device-xnn-n1024-q8.txt  device-xnn-n256-q4.txt  device-xnn-n256-q8.txt  device-xnn-n4096-q4.txt  device-xnn-n4096-q8.txt  device-xnn-n64-q4.txt  device-xnn-n64-q8.txt  host-n1024-q8.txt  host-n256-q8.txt  host-n4096-q8.txt  host-n64-q8.txt
docs/: DEEP_DIVE.md  KNOWN_ISSUES.md
evaluation/: README.md  eval_runner.py  requirements.txt
evaluation/configs/: quick-20.py  quick-5.py
evaluation/results/quick-5/: opencl-naive_summary.json  opencl_summary.json  reference_summary.json  xnnpack_summary.json
include/: mg-generate.hpp  mg-model.hpp  mg-opencl.hpp  mg-tensor.hpp  mg-transformer.hpp  mg-vqgan.hpp  mg-xnn-vqgan.hpp  mg-xnn.hpp
reference/: Dockerfile  README.md  batch_reference.py  download_checkpoints.sh  dump_intermediates.py  dump_verify.py  export_weights.py  make_reference_outputs.py  requirements.txt  run_reference.py
reference/reference_outputs/: manifest.json
reference/tests/: test_reproducibility.py
scripts/: build_android.sh  build_android_generate_opencl.sh  build_android_opencl.sh  build_android_verify_opencl.sh  build_xnnpack.sh  build_xnnpack_android.sh
src/: mg-generate.cpp  mg-model.cpp  mg-tensor.cpp  mg-transformer.cpp  mg-vqgan.cpp  mg-xnn-vqgan.cpp  mg-xnn.cpp
src/mg-cpu/: mg-cpu.cpp
src/mg-opencl/: mg-opencl.cpp
tests/: test_kernels.cpp
tools/: convert_to_gguf.py  imagenet_classes.json  main.cpp  make_synthetic_gguf.py  mg-model-info.cpp  ocl-smoke.cpp  test-opencl.cpp  verify-opencl-transformer.cpp  verify-opencl-vqgan.cpp  verify-transformer.cpp  verify-vqgan.cpp  verify-xnn-transformer.cpp  verify-xnn-vqgan.cpp  xnn-smoke.cpp
verification/: README.md  compare_intermediates.py
