load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

# Core tensor library + CPU backend + GGUF model loader (F32-first).
cc_library(
    name = "mg-core",
    srcs = [
        "src/mg-cpu/mg-cpu.cpp",
        "src/mg-generate.cpp",
        "src/mg-model.cpp",
        "src/mg-tensor.cpp",
        "src/mg-transformer.cpp",
        "src/mg-vqgan.cpp",
    ],
    hdrs = [
        "include/mg-generate.hpp",
        "include/mg-model.hpp",
        "include/mg-tensor.hpp",
        "include/mg-transformer.hpp",
        "include/mg-vqgan.hpp",
    ],
    includes = ["include"],
)

# Vendored single-header PNG writer (public domain).
cc_library(
    name = "stb",
    hdrs = ["third_party/stb/stb_image_write.h"],
    includes = ["third_party/stb"],
)

cc_binary(
    name = "mg-generate",
    srcs = ["tools/main.cpp"],
    defines = ["MG_HAS_OPENCL"],
    deps = [
        ":mg-core",
        ":mg-opencl",
        ":mg-xnn",
        ":stb",
    ],
)

cc_binary(
    name = "mg-model-info",
    srcs = ["tools/mg-model-info.cpp"],
    deps = [":mg-core"],
)

cc_binary(
    name = "verify-transformer",
    srcs = ["tools/verify-transformer.cpp"],
    deps = [":mg-core"],
)

cc_binary(
    name = "verify-vqgan",
    srcs = ["tools/verify-vqgan.cpp"],
    deps = [":mg-core"],
)

cc_binary(
    name = "xnn-smoke",
    srcs = ["tools/xnn-smoke.cpp"],
    deps = ["//third_party/xnn:xnn"],
)

# OpenCL smoke test (macOS: link OpenCL.framework).
cc_binary(
    name = "ocl-smoke",
    srcs = ["tools/ocl-smoke.cpp"],
    linkopts = select({
        "@platforms//os:macos": ["-framework", "OpenCL"],
        "//conditions:default": ["-lOpenCL"],
    }),
)

# OpenCL backend (graph executor on GPU). Separate from mg-core.
cc_library(
    name = "mg-opencl",
    srcs = ["src/mg-opencl/mg-opencl.cpp"],
    hdrs = ["include/mg-opencl.hpp"],
    includes = ["include"],
    linkopts = select({
        "@platforms//os:macos": ["-framework", "OpenCL"],
        "//conditions:default": ["-lOpenCL"],
    }),
    deps = [":mg-core"],
)

cc_binary(
    name = "test-opencl",
    srcs = ["tools/test-opencl.cpp"],
    deps = [":mg-opencl"],
)

cc_binary(
    name = "verify-opencl-transformer",
    srcs = ["tools/verify-opencl-transformer.cpp"],
    deps = [
        ":mg-core",
        ":mg-opencl",
    ],
)

cc_binary(
    name = "verify-opencl-vqgan",
    srcs = ["tools/verify-opencl-vqgan.cpp"],
    deps = [
        ":mg-core",
        ":mg-opencl",
    ],
)

# XNNPACK backend (separate from mg-core so the reference path stays XNNPACK-free).
cc_library(
    name = "mg-xnn",
    srcs = [
        "src/mg-xnn-vqgan.cpp",
        "src/mg-xnn.cpp",
    ],
    hdrs = [
        "include/mg-xnn-vqgan.hpp",
        "include/mg-xnn.hpp",
    ],
    includes = ["include"],
    deps = [
        ":mg-core",
        "//third_party/xnn:xnn",
    ],
)

cc_binary(
    name = "verify-xnn-transformer",
    srcs = ["tools/verify-xnn-transformer.cpp"],
    deps = [":mg-xnn"],
)

cc_binary(
    name = "verify-xnn-vqgan",
    srcs = ["tools/verify-xnn-vqgan.cpp"],
    deps = [":mg-xnn"],
)

cc_test(
    name = "test_kernels",
    size = "small",
    srcs = ["tests/test_kernels.cpp"],
    deps = [":mg-core"],
)
